# chartsper

./: .gitignore  README.md  pyproject.toml
chartsper/: graph.py  io.py  logging.py  plot.py  schemas.py
chartsper/io/: __init__.py  midi.py
chartsper/midi/: __init__.py  constants.py  containers.py  events.py  fileio.py  util.py
notebooks/: preparation.ipynb
scripts/: read_midi.py
