[tool.poetry]
name = "chartsper"
version = "0.1.0"
description = "chartsper"
authors = ["joefavergel <info@joefavergel.dev>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.11"
numpy = "~=1.26.0"
librosa = ">=0.10.1,<0.11.0"
matplotlib = ">=3.8.4,<3.9.0"
pydantic = ">=2.7.0,<2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
setuptools = "^69.2.0"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
